  a double leading slash can have an implementation-defined meaning
  (depending on the Operating System), as is for example the case
  in Cygwin. See http://www.opengroup.org/onlinepubs/009695399/basedefs/xbd_chap04.html#tag_04_11
  This means that GNU which no longer collapses two leading slashes
  of a path into a single slash.
* Fixed the function declaration given in README.alias
* Downgraded the license to GPLv3.

Version 2.17 --> 2.18

* Fixes regarding cwautomacros (maintainer build system only).
* Improvement of 'make release' target (maintainer target).

Version 2.16 --> 2.17

* Add support for shells that output '{' on the same line as the
  function name in the output of 'declare -f' (ie zsh).
* Added support for Tandem OSS.
* Build system now uses cwautomacros (mostly just it's autogen.sh).

Version 2.15 --> 2.16

* This release fixes the bug, introduced in 2.15, that files for
  which the 'other' permission bits apply do NOT need to be readable.
  (The confusion came from the fact that it needs to be readable
  when it is a shell script but there is no way to find out if a
  non-readable file is a shell script or not.)
  The next release of bash will be using the same algorithm again,
  and that is the only thing that really matters.  This is also the
  algorithm that most other shells use.

Version 2.14 --> 2.15

* Upgraded build system to work with automake 1.7.2 and autoconf 2.57.
* Fixed search routine to skip executables that are not executable.
  This is NOT done by all versions of bash (which is a bug).
  The stock bash-2.0.5b thinks it is allowed to execute a file
  when it has the eXec bit set for our group or other, but that
  is not the case: when we own the file, the eXec bit of the *owner*
  must be set and the group/other bits are irrelevant.  And when
  we don't own the file, but the file is in our group, then only
  the group bit matters and not the other eXec bit.  And finally,