@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS=@ACLOCAL_CWFLAGS@
 AUTOMAKE_OPTIONS = foreign
 noinst_LIBRARIES = libtilde.a
-libtilde_a_SOURCES = tilde.c shell.c tilde.h ansi_stdlib.h
+libtilde_a_SOURCES = tilde.c shell.c tilde.h ansi_stdlib.h bashansi.h xmalloc.h
 
 MAINTAINERCLEANFILES=Makefile.in
