@@ -1,4 +1,14 @@
-This directory was copied from bash-2.03.
+This directory was copied from bash-3.2.
+
+The header file bashansi.h has been added, copied from bash-3.2 as well.
+The headers ansi_stdlib.h and xmalloc.h are from the readline lib of bash-3.2.
+
+These files need the following autoconf macros,
+
+AC_CONFIG_HEADERS(config.h)			For HAVE_CONFIG_H
+AC_CHECK_FUNCS(getpwent getpwnam getpwuid)	For HAVE_GETPWENT, HAVE_GETPWNAM and HAVE_GETPWUID.
+AC_CHECK_HEADERS(unistd.h stdlib.h string.h memory.h pwd.h strings.h)
+BASH_CHECK_GETPW_FUNCS				For HAVE_GETPW_DECLS
 
 I then added the files Makefile.am and generated Makefile.in from it.
 
